k8s/dev/service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: ${REPLACE_APP_NAME}-service
spec:
  ports:
    - protocol: TCP
      port: 80 # what port to use to reach this service from the outside
      targetPort: 8080 # what port in the deployment requests should be routed to - must match the port on which the deployment is exposed
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${REPLACE_APP_NAME}-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    
    # Comment these lines to DISABLE OAuth and allow anonymous access. If you wish to also disable TLS/HTTPS, also comment out the other two annotations above.
    #nginx.ingress.kubernetes.io/auth-url: "https://auth.k8s.apac.azure.synpulse8.com/oauth2/auth"
    #nginx.ingress.kubernetes.io/auth-signin: "https://auth.k8s.apac.azure.synpulse8.com/oauth2/start$request_uri"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - k8s.apac.azure.synpulse8.com
    secretName: cluster-domain-wildcard-cert
  rules:
  - host: ${REPLACE_DEPLOYMENT_URL_SUBDOMAIN}.k8s.apac.azure.synpulse8.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${REPLACE_APP_NAME}-service # must match service name defined on line #4
            port:
              number: 80 # must match the service port defined on line #8
